test/fail/Imports/ATP-A.agda
module Imports.ATP-A where

postulate
  D    : Set
  _≡_  : D → D → Set
  a b  : D

postulate p : a ≡ b
